kubernetes/apps/ai/litellm/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: litellm
  namespace: ai
spec:
  ports:
    - name: http
      port: 4000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: litellm
    app.kubernetes.io/instance: litellm
    app.kubernetes.io/controller: litellm
